# LegacyAI

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js
backend/: main.py
backend/feature/: relationship_suggest.py
backend/feature/relationship_suggest/: lineage_engine.py  lineage_rules.py  models.py  relationship_rules.py
public/icons/backup/: README.txt
src/: App.jsx  index.css
src/assets/icons/: index.js
src/components/: AIRelationshipModal.jsx  AddEventModal.jsx  AddMemberModal.jsx  AddMemoryModal.jsx  EventDetailModal.jsx  FamilyTree.jsx  MemoryCard.jsx  Navbar.jsx
src/context/: AppContext.jsx
src/data/: mockData.js  mockEvents.js
src/pages/: CalendarPage.jsx  FamilyTreePage.jsx  HomePage.jsx  LoginPage.jsx  MemberProfilePage.jsx  MemoryTimelinePage.jsx
src/utils/: relationshipEngine.js
