[project]
name = "legacyai"
version = "0.1.0"
description = ""
authors = [
    {name = "OiHuecuata", email = "04122005truongtuan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.15,<0.16.0)",
    "black (>=26.5.1,<27.0.0)"
]